fixed styling issues in python nb

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_py.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_py.ipynb
@@ -8,28 +8,27 @@
     "### Predicting Avocado's Average Price using Linear Regression\n",
     "\n",
     "### Objective\n",
-    "* Our target is to predict the future price of avocado's depending on various features (Type, Region, Total Bags, ...)\n",
+    "* Our target is to predict the future price of avocado's depending on various features (Type, Region, Total Bags, ...).\n",
     "\n",
     "### Dataset\n",
     "Avocado Prices dataset has the following features:\n",
-    "\n",
-    "PLU - Product Lookup Code in Hass avocado board.\n",
-    "* Date - The date of the observation\n",
-    "* AveragePrice - observed average price of single avocado\n",
-    "* Total Volume - Total number of avocado's sold\n",
-    "* 4046 - Total number of avocado's with PLU 4046 sold\n",
-    "* 4225 - Total number of avocado's with PLU 4225 sold\n",
-    "* 4770 - Total number of avocado's with PLU 4770 sold\n",
-    "* Total Bags = Small Bags + Large Bags + XLarge Bags\n",
-    "* Type - conventional or organic\n",
-    "* Year - year of observation\n",
-    "* Region - city or region of observation\n",
+    " PLU - Product Lookup Code in Hass avocado board.\n",
+    "* Date - The date of the observation.\n",
+    "* AveragePrice - Observed average price of single avocado.\n",
+    "* Total Volume - Total number of avocado's sold.\n",
+    "* 4046 - Total number of avocado's with PLU 4046 sold.\n",
+    "* 4225 - Total number of avocado's with PLU 4225 sold.\n",
+    "* 4770 - Total number of avocado's with PLU 4770 sold.\n",
+    "* Total Bags = Small Bags + Large Bags + XLarge Bags.\n",
+    "* Type - Conventional or organic.\n",
+    "* Year - Year of observation.\n",
+    "* Region - City or region of observation.\n",
     "\n",
     "### Approach\n",
-    "* In this example, first we will do EDA on the dataset to find correlation between various features\n",
-    "* Then we'll be using onehot encoding to encode categorical features\n",
-    "* Finally we will use LinearRegression API from mlpack to learn the correlation between various features and the target i.e AveragePrice\n",
-    "* After training the model, we will use it to do some predictions, followed by various evaluation metrics to quanitfy how well our model behaves"
+    "* In this example, first we will do EDA on the dataset to find correlation between various features.\n",
+    "* Then we'll be using onehot encoding to encode categorical features.\n",
+    "* Finally we will use LinearRegression API from mlpack to learn the correlation between various features and the target i.e AveragePrice.\n",
+    "* After training the model, we will use it to do some predictions, followed by various evaluation metrics to quantify how well our model behaves."
    ]
   },
   {
@@ -468,8 +467,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avocadoData['Date'] =pd.to_datetime(avocadoData.Date)\n",
-    "avocadoData.sort_values(by=['Date'], inplace=True, ascending=True)"
+    "avocadoData['Date'] = pd.to_datetime(avocadoData.Date)\n",
+    "avocadoData.sort_values(by = ['Date'], inplace = True, ascending = True)"
    ]
   },
   {
@@ -495,7 +494,7 @@
    "id": "518c81eb-3bc0-46a0-9650-b71d3b89a15c",
    "metadata": {},
    "source": [
-    "* In the below visualization we are intersted to see if there is any trends over time for the prices of conventional avocados."
+    "* In the below visualization we are interested to see if there are any trends that occur with the prices of conventional avocados over a period of time."
    ]
   },
   {
@@ -530,7 +529,7 @@
    "id": "c362b5b4-5cbf-44cf-b656-4fb4489bf630",
    "metadata": {},
    "source": [
-    "* In the below visualization we are intersted to see if there is any trends over time for the prices of organic avocados."
+    "* In the below visualization we are interested to see if there are any trends that occur with the prices of organic avocados over a period of time."
    ]
   },
   {
@@ -566,9 +565,9 @@
    "metadata": {},
    "source": [
     "### Observations\n",
-    "* Looks like every year avocado's are most expensive between August - November\n",
-    "* There is a steep rise in the price in 2017\n",
-    "* December - February seems to be the best months to purchase avocado's"
+    "* Looks like every year avocado's are most expensive between August - November.\n",
+    "* There is a steep rise in the price in 2017.\n",
+    "* December - February seems to be the best months to purchase avocado's."
    ]
   },
   {
@@ -634,14 +633,14 @@
    "source": [
     "### Correlation\n",
     "There is high correlation between:\n",
-    "* 4046 & total volume \n",
-    "* 4225 & total volume\n",
-    "* 4770 & total volume\n",
-    "* total bags & total volume\n",
-    "* small bags & total bags\n",
+    "* 4046 & total volume. \n",
+    "* 4225 & total volume.\n",
+    "* 4770 & total volume.\n",
+    "* Total bags & total volume.\n",
+    "* Small bags & total bags.\n",
     "* We can observe that 4046 avocados are the most sold type in US.\n",
     "* Since there is high correlation between Total Bags, Total Volume & Small bags, \n",
-    "  we assume most sales comes from small bags"
+    "  we assume most sales comes from small bags."
    ]
   },
   {
@@ -677,12 +676,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "8a8680eb-d9bd-4844-a114-71795bca5aec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Features of interest\n",
+    "# Features of interest.\n",
     "\n",
     "features = [\"4046\", \"4225\", \"4770\", \"Small Bags\", \"Large Bags\", \"XLarge Bags\", \"type\", \"year\", \"region\"]"
    ]
@@ -779,7 +778,7 @@
     "\n",
     "Regression analysis is the most widely used method of prediction. Linear regression is used when the dataset has a linear correlation and as the name suggests, multiple linear regression has one independent variable (predictor) and one or more dependent variable(response).\n",
     "\n",
-    "The simple linear regression equation is represented as y = $a + b_{1}x_{1} + b_{2}x_{2} + b_{3}x_{3} + ... + b_{n}x_{n}$ where $x_{i}$ is the ith explanatory variable, y is the dependent variable, $b_{i}$ is ith coefficient and a is the intercept\n",
+    "The simple linear regression equation is represented as y = $a + b_{1}x_{1} + b_{2}x_{2} + b_{3}x_{3} + ... + b_{n}x_{n}$ where $x_{i}$ is the ith explanatory variable, y is the dependent variable, $b_{i}$ is ith coefficient and a is the intercept.\n",
     "\n",
     "To perform linear regression we'll be using `LinearRegression()` api from mlpack."
    ]
