--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
@@ -8,28 +8,27 @@
     "### Predicting Avocado's Average Price using Linear Regression\n",
     "\n",
     "### Objective\n",
-    "* Our target is to predict the future price of avocado's depending on various features (Type, Region, Total Bags, ...)\n",
+    "* Our target is to predict the future price of avocado's depending on various features (Type, Region, Total Bags, ...).\n",
     "\n",
     "### Dataset\n",
     "Avocado Prices dataset has the following features:\n",
-    "\n",
-    "PLU - Product Lookup Code in Hass avocado board.\n",
-    "* Date - The date of the observation\n",
-    "* AveragePrice - observed average price of single avocado\n",
-    "* Total Volume - Total number of avocado's sold\n",
-    "* 4046 - Total number of avocado's with PLU 4046 sold\n",
-    "* 4225 - Total number of avocado's with PLU 4225 sold\n",
-    "* 4770 - Total number of avocado's with PLU 4770 sold\n",
-    "* Total Bags = Small Bags + Large Bags + XLarge Bags\n",
-    "* Type - conventional or organic\n",
-    "* Year - year of observation\n",
-    "* Region - city or region of observation\n",
+    "* PLU - Product Lookup Code in Hass avocado board.\n",
+    "* Date - The date of the observation.\n",
+    "* AveragePrice - Observed average price of single avocado.\n",
+    "* Total Volume - Total number of avocado's sold.\n",
+    "* 4046 - Total number of avocado's with PLU 4046 sold.\n",
+    "* 4225 - Total number of avocado's with PLU 4225 sold.\n",
+    "* 4770 - Total number of avocado's with PLU 4770 sold.\n",
+    "* Total Bags = Small Bags + Large Bags + XLarge Bags.\n",
+    "* Type - Conventional or organic.\n",
+    "* Year - Year of observation.\n",
+    "* Region - City or region of observation.\n",
     "\n",
     "### Approach\n",
-    "* In this example, first we will do EDA on the dataset to find correlation between various features\n",
-    "* Then we'll be using onehot encoding to encode categorical features\n",
-    "* Finally we will use LinearRegression API from mlpack to learn the correlation between various features and the target i.e AveragePrice\n",
-    "* After training the model, we will use it to do some predictions, followed by various evaluation metrics to quanitfy how well our model behaves"
+    "* In this example, first we will do EDA on the dataset to find correlation between various features.\n",
+    "* Then we'll be using onehot encoding to encode categorical features.\n",
+    "* Finally we will use LinearRegression API from mlpack to learn the correlation between various features and the target i.e AveragePrice.\n",
+    "* After training the model, we will use it to do some predictions, followed by various evaluation metrics to quantify how well our model behaves."
    ]
   },
   {
@@ -174,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Load the dataset into armadillo matrix\n",
+    "// Load the dataset into armadillo matrix.\n",
     "\n",
     "arma::mat matrix;\n",
     "mlpack::data::DatasetInfo info;\n",
@@ -206,9 +205,12 @@
    ],
    "source": [
     "// Printing header for dataset.\n",
-    "std::cout << std::setw(10) << \"AveragePrice\" << std::setw(14) << \"Total Volume\" << std::setw(9) << \"4046\" << std::setw(13) << \"4225\" << std::setw(13) << \"4770\" \n",
-    "    << std::setw(17) << \"Total Bags\" << std::setw(13) << \"Small Bags\" << std::setw(13) << \"Large Bags\" << std::setw(17) << \"XLarge Bags\" << \n",
-    "    std::setw(10) << \"Type\" << std::setw(10) << \"Year\" << std::setw(15) << \"Region\" <<  std::endl;\n",
+    "std::cout << std::setw(10) << \"AveragePrice\" << std::setw(14) \n",
+    "    << \"Total Volume\" << std::setw(9) << \"4046\" << std::setw(13) \n",
+    "    << \"4225\" << std::setw(13) << \"4770\" << std::setw(17) << \"Total Bags\" \n",
+    "    << std::setw(13) << \"Small Bags\" << std::setw(13) << \"Large Bags\" \n",
+    "    << std::setw(17) << \"XLarge Bags\" << std::setw(10) << \"Type\" \n",
+    "    << std::setw(10) << \"Year\" << std::setw(15) << \"Region\" <<  std::endl;\n",
     "\n",
     "std::cout << matrix.submat(0, 0, matrix.n_rows-1, 5).t() << std::endl;"
    ]
@@ -226,7 +228,7 @@
    "id": "ec24e405-4a4c-41ad-a560-2572d36c26f4",
    "metadata": {},
    "source": [
-    "* In the below visualization we are intersted to see if there is any trends over time for the prices of conventional avocados."
+    "* In the below visualization we are interested to see if there are any trends that occur with the prices of conventional avocados over a period of time."
    ]
   },
   {
@@ -262,7 +264,7 @@
    "id": "48f79a7b-9a06-48c3-a131-b935eff4972d",
    "metadata": {},
    "source": [
-    "* In the below visualization we are intersted to see if there is any trends over time for the prices of organic avocados."
+    "* In the below visualization we are interested to see if there are any trends that occur with the prices of organic avocados over a period of time."
    ]
   },
   {
@@ -299,9 +301,9 @@
    "metadata": {},
    "source": [
     "### Observations\n",
-    "* Looks like every year avocado's are most expensive between August - November\n",
-    "* There is a steep rise in the price in 2017\n",
-    "* December - February seems to be the best months to purchase avocado's"
+    "* Looks like every year avocado's are most expensive between August - November.\n",
+    "* There is a steep rise in the price in 2017.\n",
+    "* December - February seems to be the best months to purchase avocado's."
    ]
   },
   {
@@ -367,14 +369,14 @@
    "source": [
     "### Correlation\n",
     "There is high correlation between:\n",
-    "* 4046 & total volume \n",
-    "* 4225 & total volume\n",
-    "* 4770 & total volume\n",
-    "* total bags & total volume\n",
-    "* small bags & total bags\n",
+    "* 4046 & total volume. \n",
+    "* 4225 & total volume.\n",
+    "* 4770 & total volume.\n",
+    "* Total bags & total volume.\n",
+    "* Small bags & total bags.\n",
     "* We can observe that 4046 avocados are the most sold type in US.\n",
     "* Since there is high correlation between Total Bags, Total Volume & Small bags, \n",
-    "  we assume most sales comes from small bags"
+    "  we assume most sales comes from small bags."
    ]
   },
   {
@@ -508,7 +510,7 @@
     "\n",
     "Regression analysis is the most widely used method of prediction. Linear regression is used when the dataset has a linear correlation and as the name suggests, multiple linear regression has one independent variable (predictor) and one or more dependent variable(response).\n",
     "\n",
-    "The simple linear regression equation is represented as y = $a + b_{1}x_{1} + b_{2}x_{2} + b_{3}x_{3} + ... + b_{n}x_{n}$ where $x_{i}$ is the ith explanatory variable, y is the dependent variable, $b_{i}$ is ith coefficient and a is the intercept\n",
+    "The simple linear regression equation is represented as y = $a + b_{1}x_{1} + b_{2}x_{2} + b_{3}x_{3} + ... + b_{n}x_{n}$ where $x_{i}$ is the ith explanatory variable, y is the dependent variable, $b_{i}$ is ith coefficient and a is the intercept.\n",
     "\n",
     "To perform linear regression we'll be using `LinearRegression()` api from mlpack."
    ]
@@ -553,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Save the yTest and yPreds into csv for generating plots\n",
+    "// Save the yTest and yPreds into csv for generating plots.\n",
     "arma::mat preds;\n",
     "preds.insert_rows(0, yTest);\n",
     "preds.insert_rows(1, yPreds);"
