fixed minor styling issues in comments

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_py.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_py.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "### Dataset\n",
     "Avocado Prices dataset has the following features:\n",
-    " PLU - Product Lookup Code in Hass avocado board.\n",
+    "* PLU - Product Lookup Code in Hass avocado board.\n",
     "* Date - The date of the observation.\n",
     "* AveragePrice - Observed average price of single avocado.\n",
     "* Total Volume - Total number of avocado's sold.\n",
