Use datasets.mlpack.org as the source for the datasets.

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -q https://mlpack.org/datasets/avocado.csv.gz"
+    "!wget -q https://datasets.mlpack.org/avocado.csv.gz"
    ]
   },
   {
