--- a/salary_prediction_with_linear_regression/salary-prediction-linear-regression-cpp.ipynb
+++ b/salary_prediction_with_linear_regression/salary-prediction-linear-regression-cpp.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -q https://mlpack.org/datasets/Salary_Data.csv"
+    "!wget -q https://datasets.mlpack.org/Salary_Data.csv"
    ]
   },
   {
