added cpython api file for imputation

--- a/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/california_housing_price_prediction_with_lr_cpp.ipynb
@@ -1,9 +1,79 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5d2367ae",
+   "metadata": {},
+   "source": [
+    "### Predicting  California House Prices with  Linear Regression\n",
+    "\n",
+    "### Objective\n",
+    "* To predict California Housing Prices using the most simple Linear Regression Model and see how it performs.\n",
+    "* To understand the modeling workflow using mlpack.\n",
+    "\n",
+    "### About the Data\n",
+    " This dataset is a modified version of the California Housing dataset available from Luís Torgo's page (University of Porto). Luís Torgo obtained it from the StatLib repository (which is closed now). The dataset may also be downloaded from StatLib mirrors.\n",
+    " \n",
+    " This dataset is also used in a book HandsOn-ML ( a very good book and highly recommended).\n",
+    " \n",
+    " The dataset in this directory is almost identical to the original, with two differences:\n",
+    "207 values were randomly removed from the totalbedrooms column, so we can discuss what to do with missing data. An additional categorical attribute called oceanproximity was added, indicating (very roughly) whether each block group is near the ocean, near the Bay area, inland or on an island. This allows discussing what to do with categorical data.\n",
+    "Note that the block groups are called \"districts\" in the Jupyter notebooks, simply because in some contexts the name \"block group\" was confusing.\"\n",
+    "\n",
+    "Lets look at the features of the dataset:\n",
+    "* Longitude : Longitude coordinate of the houses.\n",
+    "* Latitude : Latitude coordinate of the houses.\n",
+    "* Housing Median Age.\n",
+    "* Total Rooms : Number of rooms in a location.\n",
+    "* Total Bedrooms : Number of bedroooms in a location.\n",
+    "* Population : Population in that location.\n",
+    "* Median Income : Median Income of households in a location.\n",
+    "* Median House Value : Median House Value in a location.\n",
+    "* Ocean Proximity : Closeness to shore. \n",
+    "\n",
+    "### Approach\n",
+    " Here, we will try to recreate the workflow from the book mentioned above. \n",
+    " * Look at the Big Picture.\n",
+    " * Get the Data.\n",
+    " * Discover and Visualize the data to gain insights.\n",
+    " * Pre-Process the data for the Ml Algorithm.\n",
+    " * Create new features. \n",
+    " * Splitting the data.\n",
+    " * Training the ML model using MLPACK.\n",
+    " * Residuals, Errors and Conclusion.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05e7469a",
+   "metadata": {},
+   "source": [
+    "### Big Picture\n",
+    "\n",
+    "Suppose you work in a Real State Agency as an analyst or Data Scientist and your Boss wants you to predict the housing prices in a certain location. You are provided with a dataset. So, what will be the first thing to do?\n",
+    "\n",
+    "If you are probably jumping right into anaylsing the data and ML Algos, then this is a wrong a step. Its a big \"NO\". \n",
+    " <h5> The first thing is to ask Questions. </h5>\n",
+    " \n",
+    " Questions like :  What will be the predictions used for? Will it be fed into some other system or not? And Many More, just to have concrete goals.\n",
+    " \n",
+    " So, your boss says that they will be using the data to get the predcitions so that the other team can work on some investment strategies.\n",
+    " \n",
+    "So, let's get started."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6006486d",
+   "metadata": {},
+   "source": [
+    "<h3> Importing Header Files </h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "turned-benefit",
+   "id": "1ed6e475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +87,7 @@
     "\n",
     "namespace plt = matplotlibcpp;\n",
     "using namespace mlpack;\n",
-    "using namespace mlpack::data;\n",
-    "\n"
+    "using namespace mlpack::data;\n"
    ]
   },
   {
@@ -26,59 +95,14 @@
    "execution_count": 2,
    "id": "401c6664",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2021-06-21 12:15:54--  https://matrix.org/_matrix/media/r0/download/matrix.org/WvrgbgzkyIMbvkxLkKKNyMrO/housing.csv\n",
-      "Resolving matrix.org (matrix.org)... 104.20.21.236, 104.20.20.236, 2606:4700:10::6814:14ec, ...\n",
-      "Connecting to matrix.org (matrix.org)|104.20.21.236|:443... connected.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 1423529 (1.4M) [text/csv]\n",
-      "Saving to: ‘housing.csv.1’\n",
-      "\n",
-      "     0K .......... .......... .......... .......... ..........  3% 5.65M 0s\n",
-      "    50K .......... .......... .......... .......... ..........  7% 4.87M 0s\n",
-      "   100K .......... .......... .......... .......... .......... 10% 14.6M 0s\n",
-      "   150K .......... .......... .......... .......... .......... 14% 10.2M 0s\n",
-      "   200K .......... .......... .......... .......... .......... 17% 10.0M 0s\n",
-      "   250K .......... .......... .......... .......... .......... 21% 11.0M 0s\n",
-      "   300K .......... .......... .......... .......... .......... 25% 11.7M 0s\n",
-      "   350K .......... .......... .......... .......... .......... 28% 6.42M 0s\n",
-      "   400K .......... .......... .......... .......... .......... 32% 10.1M 0s\n",
-      "   450K .......... .......... .......... .......... .......... 35% 18.2M 0s\n",
-      "   500K .......... .......... .......... .......... .......... 39% 11.6M 0s\n",
-      "   550K .......... .......... .......... .......... .......... 43% 11.2M 0s\n",
-      "   600K .......... .......... .......... .......... .......... 46% 9.93M 0s\n",
-      "   650K .......... .......... .......... .......... .......... 50% 19.6M 0s\n",
-      "   700K .......... .......... .......... .......... .......... 53% 7.51M 0s\n",
-      "   750K .......... .......... .......... .......... .......... 57% 6.74M 0s\n",
-      "   800K .......... .......... .......... .......... .......... 61% 1.31M 0s\n",
-      "   850K .......... .......... .......... .......... .......... 64% 63.3M 0s\n",
-      "   900K .......... .......... .......... .......... .......... 68% 83.5M 0s\n",
-      "   950K .......... .......... .......... .......... .......... 71% 55.7M 0s\n",
-      "  1000K .......... .......... .......... .......... .......... 75% 82.6M 0s\n",
-      "  1050K .......... .......... .......... .......... .......... 79% 76.3M 0s\n",
-      "  1100K .......... .......... .......... .......... .......... 82% 79.3M 0s\n",
-      "  1150K .......... .......... .......... .......... .......... 86% 55.7M 0s\n",
-      "  1200K .......... .......... .......... .......... .......... 89% 15.7M 0s\n",
-      "  1250K .......... .......... .......... .......... .......... 93% 13.9M 0s\n",
-      "  1300K .......... .......... .......... .......... .......... 97% 13.0M 0s\n",
-      "  1350K .......... .......... .......... ..........           100% 10.8M=0.1s\n",
-      "\n",
-      "2021-06-21 12:15:54 (9.60 MB/s) - ‘housing.csv.1’ saved [1423529/1423529]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!wget https://matrix.org/_matrix/media/r0/download/matrix.org/WvrgbgzkyIMbvkxLkKKNyMrO/housing.csv"
+    "!wget  -q https://matrix.org/_matrix/media/r0/download/matrix.org/WvrgbgzkyIMbvkxLkKKNyMrO/housing.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "understood-istanbul",
    "metadata": {},
    "outputs": [],
