added metrics val

--- a/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-cpp.ipynb
+++ b/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-cpp.ipynb
@@ -86,12 +86,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbccf024e50a497a8b9cd8b355b60cc3",
+       "model_id": "859a9f36432f46acb113df9cd9eb02ec",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: fbccf024e50a497a8b9cd8b355b60cc3"
+       "A Jupyter widget with unique id: 859a9f36432f46acb113df9cd9eb02ec"
       ]
      },
      "execution_count": 6,
@@ -213,6 +213,26 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "d4b0bcc2-fa2b-485d-b353-43bfafbfb7f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data::Save(\"weatherAUSEnc.csv\", weatherData);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a7a18486-ba32-4765-9a26-048e91c530f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sed -i '1iLocation,MinTemp,MaxTemp,Rainfall,Evaporation,Sunshine,WindGustDir,WindGustSpeed,WindDir9am,WindDir3pm,WindSpeed9am,WindSpeed3pm,Humidity9am,Humidity3pm,Pressure9am,Pressure3pm,Cloud9am,Cloud3pm,Temp9am,Temp3pm,RainToday,RainTomorrow' weatherAUSEnc.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "825b4b81-8759-4898-9799-faf17f3f9342",
    "metadata": {},
    "outputs": [
@@ -242,22 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "1f1ba740-db55-4e1d-a097-af11c21420c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af3f9eed073a48e684541f2cbfa12dc3",
+       "model_id": "779ba021d19b4333b7a0e7757f84f27b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: af3f9eed073a48e684541f2cbfa12dc3"
+       "A Jupyter widget with unique id: 779ba021d19b4333b7a0e7757f84f27b"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,22 +299,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "5db5a03f-104c-41fc-a164-565f17cb76e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c0cf49b351b4168b13323431fb3d999",
+       "model_id": "15a18dd227df4db290304a9d85ddab9b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 6c0cf49b351b4168b13323431fb3d999"
+       "A Jupyter widget with unique id: 15a18dd227df4db290304a9d85ddab9b"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,22 +327,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "ba5c20b4-0a12-45c8-b125-39bd1fbd1422",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f2a354041f54ed984a020b007f5621d",
+       "model_id": "126a3d5f0fc24efeb2861fc85fe6c2b9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 3f2a354041f54ed984a020b007f5621d"
+       "A Jupyter widget with unique id: 126a3d5f0fc24efeb2861fc85fe6c2b9"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,22 +355,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "28abe712-59be-4827-aec5-2d18a095649e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc8abc6e988b4b52a537b606854e701e",
+       "model_id": "ab091e7725c84fae8c3b522eb367ebd8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: cc8abc6e988b4b52a537b606854e701e"
+       "A Jupyter widget with unique id: ab091e7725c84fae8c3b522eb367ebd8"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,28 +391,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "9c09fa50-4ff2-43a0-9837-29560ca9bc6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "498ea709990248f18520297a1a26eb1b",
+       "model_id": "84a3e07d7f134f4f8c464b6865c6bde7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 498ea709990248f18520297a1a26eb1b"
+       "A Jupyter widget with unique id: 84a3e07d7f134f4f8c464b6865c6bde7"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "heatmap(\"weatherAUS_mean_imputed.csv\", \"coolwarm\", \"Part-1 Correlation Heatmap\", 1);\n",
+    "heatmap(\"weatherAUSEnc.csv\", \"coolwarm\", \"Part-1 Correlation Heatmap\", 1);\n",
     "auto img = xw::image_from_file(\"Part-1 Correlation Heatmap.png\").finalize();\n",
     "img"
    ]
@@ -415,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "b200f227-5a16-4cfa-98c8-adf01fe4e1eb",
    "metadata": {},
    "outputs": [],
@@ -426,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "55395532-4475-4af3-9cf8-794aec345ea6",
    "metadata": {},
    "outputs": [],
@@ -437,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "785e7340-ad82-423e-a297-2fcc73c16e3c",
    "metadata": {},
    "outputs": [],
@@ -447,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "604eba7e-c416-4831-a57f-4254ae8a25cc",
    "metadata": {},
    "outputs": [],
@@ -457,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "bea40bbe-266e-4c4b-8b43-25b8fddf1d95",
    "metadata": {},
    "outputs": [],
@@ -470,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "73c3b088-b8a8-485b-ad21-6de158b863b2",
    "metadata": {},
    "outputs": [],
@@ -480,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "66fd8054-1d20-4a00-977e-ef9650ae349d",
    "metadata": {},
    "outputs": [],
@@ -491,7 +511,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
+   "id": "7b2e442a-cf69-4196-a65d-5721164c1663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double precision(const size_t truePos, const size_t falsePos)\n",
+    "{\n",
+    "    return (double)truePos / (double)(truePos + falsePos);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "1ed9e33f-e38c-41a2-99cc-a52d07a5551b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double recall(const size_t truePos, const size_t falseNeg)\n",
+    "{\n",
+    "    return (double)truePos / (double)(truePos + falseNeg);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7477b14a-483a-4a66-9a07-7065d96977c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "double f1score(const size_t truePos, const size_t falsePos, const size_t falseNeg)\n",
+    "{\n",
+    "    double prec = precision(truePos, falsePos);\n",
+    "    double rec = precision(truePos, falseNeg);\n",
+    "    return (prec * rec) / (prec + rec);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "000f564b-0f12-4693-9f27-a061d6c0fbd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "void classification_report(const arma::Row<size_t>& yPreds, const arma::Row<size_t>& yTrue)\n",
+    "{\n",
+    "    arma::Row<size_t> uniqs = arma::unique(yTrue);\n",
+    "    for(auto val: uniqs)\n",
+    "    {\n",
+    "        const size_t truePos = \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5a6b7aa6-3665-40c3-824f-7db6286dc1b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "classification_report(output, Ytest);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "4fb69353-9bc0-49e0-a1e6-9dddb39f8312",
    "metadata": {},
    "outputs": [],
@@ -501,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "71f55a5d-5bb6-4aee-aac7-e8a7942242d8",
    "metadata": {},
    "outputs": [
@@ -509,7 +606,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.856538\n"
+      "Accuracy: 0.857033\n"
      ]
     }
    ],
