fixed styles and evaluation for cpp notebook

--- a/california_housing_price_prediction_with_linear_regression/California_housing_prices_predictions_with_lr_python.ipynb
+++ b/california_housing_price_prediction_with_linear_regression/California_housing_prices_predictions_with_lr_python.ipynb
@@ -23,7 +23,7 @@
     "Lets look at the features of the dataset:\n",
     "* Longitude : Longitude coordinate of the houses.\n",
     "* Latitude : Latitude coordinate of the houses.\n",
-    "* Housing Median Age.\n",
+    "* Housing Median Age : Average life span of houses.\n",
     "* Total Rooms : Number of rooms in a location.\n",
     "* Total Bedrooms : Number of bedroooms in a location.\n",
     "* Population : Population in that location.\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "79251923",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "ae042e5d",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "cfcea99e",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "015161cf",
    "metadata": {},
    "outputs": [
@@ -508,17 +508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "607214a7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f99d9679750>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe73ea258d0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -545,17 +545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "a2e78140",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f99d9c18150>"
+       "<matplotlib.legend.Legend at 0x7fe73cab0690>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "343a7b40",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "cd7b0f63",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "696       387.0       161.0         3.9063            178400.0        NEAR BAY  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "2c182111",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "bc5c802e",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "c25339f1",
    "metadata": {},
    "outputs": [],
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "b38ebafa",
    "metadata": {},
    "outputs": [],
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "33f33aad",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "3c3adf00",
    "metadata": {},
    "outputs": [],
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "4130bd66",
    "metadata": {},
    "outputs": [
